# SenseCAP_Watcher_mimiclaw

./: AGENTS.md  CLAUDE.md  README.md  README_CN.md  README_JA.md  partitions.csv  sdkconfig.defaults.esp32s3
docs/log/: err.md  log.md
docs/plans/: 2026-03-03-sensecap-watcher-hal-complete.md  (+1 more)
main/: CMakeLists.txt  idf_component.yml  mimi.c  mimi_config.h  mimi_secrets.h.example
main/agent/: context_builder.c
main/channels/telegram/: telegram_bot.c
main/fonts/: font_awesome_20_4.c  mimi_fonts.h
main/hal/: hal_config.h  hal_init.c  hal_init.h
main/hal/audio/: README.md  es7243e.c  es7243e.h  es8311.c  es8311.h  hal_audio.c  hal_audio.h  hal_audio_example.c
main/hal/backlight/: hal_backlight.c  hal_backlight.h
main/hal/battery/: hal_battery.c  hal_battery.h
main/hal/camera/: hal_camera.c  hal_camera.h  sscma_client.c  sscma_client.h
main/hal/display/: hal_display.c  hal_display.h  lvgl_port.c  lvgl_port.h  spd2010.c  spd2010.h
main/hal/input/: CMakeLists.txt  IMPLEMENTATION.md  README.md  hal_button.c  hal_button.h  hal_button_example.c  hal_encoder.c  hal_encoder.h
main/hal/io_expander/: hal_io_exp.c  hal_io_exp.h  tca9555.c  tca9555.h
main/hal/led/: hal_led.c  hal_led.h
main/hal/power/: hal_power.c  hal_power.h
main/hal/sd_card/: hal_sd.c  hal_sd.h
main/hal/touch/: hal_touch.c  hal_touch.h
main/llm/: llm_proxy.c
main/telegram/: telegram_bot.h
main/tools/: tool_camera.c  tool_camera.h  tool_display.c  tool_display.h  tool_face.c  tool_face.h  tool_registry.c  tool_sysinfo.c  tool_sysinfo.h
main/ui/: robot_face.c  robot_face.h
(+2 files in other folders)
