idf_component_register(
    SRCS
        "mimi.c"
        "bus/message_bus.c"
        "wifi/wifi_manager.c"
        "telegram/telegram_bot.c"
        "llm/llm_proxy.c"
        "agent/agent_loop.c"
        "agent/context_builder.c"
        "memory/memory_store.c"
        "memory/session_mgr.c"
        "gateway/ws_server.c"
        "cli/serial_cli.c"
        "proxy/http_proxy.c"
        "cron/cron_service.c"
        "heartbeat/heartbeat.c"
        "tools/tool_registry.c"
        "tools/tool_cron.c"
        "tools/tool_web_search.c"
        "tools/tool_get_time.c"
        "tools/tool_files.c"
        "skills/skill_loader.c"
        "hal/led/hal_led.c"
        "hal/audio/es8311.c"
        "hal/audio/es7243e.c"
        "hal/audio/hal_audio.c"
        "hal/io_expander/tca9555.c"
        "hal/io_expander/hal_io_exp.c"
        "hal/power/hal_power.c"
        "hal/display/spd2010.c"
        "hal/display/hal_display.c"
        "hal/display/lvgl_port.c"
        "hal/sd_card/hal_sd.c"
        "hal/input/hal_button.c"
        "hal/input/hal_encoder.c"
        "hal/touch/hal_touch.c"
        "hal/battery/hal_battery.c"
        "hal/backlight/hal_backlight.c"
        "hal/camera/hal_camera.c"
        "hal/hal_init.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash esp_wifi esp_netif esp_http_client esp_http_server
        esp_https_ota esp_event json spiffs console vfs app_update esp-tls
        esp_timer driver esp_adc fatfs
)
